<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background1">

    <ImageButton
        android:id="@+id/back_2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="10dp"
        android:background="@mipmap/back_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/title"
        android:textColor="#ff000000"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.example.lenovo.thedictionaryofsanguo.CircleImageView
        android:id="@+id/picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@mipmap/bk"
        app:border_color="#ffffff"
        app:border_width="5dp"
        android:contentDescription="@string/picture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="12dp"
        />
    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/Textinputlayout_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/picture"
        android:layout_marginTop="6dp"
        android:paddingRight="20dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="10dp">
        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/edit_text1"
            android:inputType="text"
            android:textSize="15sp"
            android:hint="@string/name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Textinputlayout_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="6dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/picture">

        <EditText
            android:id="@+id/edit_text2"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/Textinputlayout_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Textinputlayout_1"
        android:layout_marginTop="6dp"
        android:paddingRight="20dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="10dp">
        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/edit_text5"
            android:inputType="text"
            android:textSize="15sp"
            android:hint="性别"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Textinputlayout_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="6dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Textinputlayout_1">

        <EditText
            android:id="@+id/edit_text6"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:hint="效忠势力"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/Textinputlayout_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Textinputlayout_5"
        android:layout_marginTop="6dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        >

        <EditText
            android:id="@+id/edit_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/Textinputlayout_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Textinputlayout_3"
        android:layout_marginTop="6dp"
        android:paddingRight="10dp"
        android:paddingLeft="20dp"
        >
        <EditText
            android:id="@+id/edit_text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduction"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:textColor="@color/colorPrimaryDark"
            android:ellipsize="end"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
    </android.support.design.widget.TextInputLayout>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Textinputlayout_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="12dp"
        >
        <TableRow
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <Button
                android:id="@+id/Button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:background="@drawable/buttoncolor"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/Button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttoncolor"
                android:text="@string/cancel"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                />
        </TableRow>
    </TableLayout>


</android.support.constraint.ConstraintLayout>
